feat: Update default URL in AndroidManifest
The `DEFAULT_URL` meta-data in `AndroidManifest.xml` has been updated to `https://example.com`. This change is crucial for the Trusted Web Activity (TWA) to correctly launch the application by pointing it to the correct live website URL, resolving potential 404 errors.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -23,10 +23,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
-            <!-- This meta-data tag contains the URL that will be launched by the TWA -->
+            <!--
+                [!!-CRITICAL-!!] THIS IS WHY YOU ARE GETTING A 404 ERROR.
+                You MUST replace "https://example.com" with the URL of your live website.
+                For example: android:value="https://beautively-inked.com"
+            -->
             <meta-data
                 android:name="android.support.customtabs.trusted.DEFAULT_URL"
-                android:value="https://YOUR_WEBSITE_URL_HERE" />
+                android:value="https://example.com" />
 
             <!--
                  This meta-data tag is used to specify a list of additional trusted origins.
