feat: Configure PWA for Beautively Inked
Update manifest.json and service-worker.js to properly configure the Progressive Web App. This includes setting the correct start URL, defining an application ID, and ensuring the offline fallback page and image are precached. Also, added related application information for Android Play Store.

--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,8 @@
       "purpose": "any maskable"
     }
   ],
-  "start_url": ".",
+  "start_url": "/",
+  "id": "/",
   "display": "standalone",
   "theme_color": "#0a0a0a",
   "background_color": "#0a0a0a",
@@ -40,6 +41,14 @@
       "type": "image/png",
       "sizes": "1080x1080",
       "form_factor": "wide"
+    }
+  ],
+  "prefer_related_applications": true,
+  "related_applications": [
+    {
+      "platform": "play",
+      "id": "com.beautively.inked",
+      "url": "https://play.google.com/store/apps/details?id=com.beautively.inked"
     }
   ]
 }
