feat: Improve service worker registration and contact form UX
Updates service worker registration to wait for the window load event for better reliability. Enhances the contact form by refining the layout, improving text, and adding a step-by-step process description for booking. Also includes minor cleanup and aesthetic adjustments in the About Us section and manifest file.

--- a/manifest.json
+++ b/manifest.json
@@ -32,9 +32,14 @@
   "scope": "/",
   "id": "/",
   "display": "standalone",
+  "display_override": [
+    "standalone"
+  ],
   "theme_color": "#0a0a0a",
   "background_color": "#0a0a0a",
   "orientation": "portrait-primary",
+  "lang": "en-US",
+  "iarc_rating_id": "",
   "categories": [
     "lifestyle",
     "personalization"
