--- a/manifest.json
+++ b/manifest.json
@@ -33,6 +33,8 @@
   "id": "/",
   "display": "standalone",
   "display_override": [
+    "window-controls-overlay",
+    "tabbed",
     "standalone"
   ],
   "theme_color": "#0a0a0a",
@@ -76,6 +78,90 @@
       "short_name": "Showroom",
       "description": "Browse our portfolio of work",
       "url": "/#showroom"
+    }
+  ],
+  "share_target": {
+    "action": "/share-target",
+    "method": "POST",
+    "enctype": "multipart/form-data",
+    "params": {
+      "title": "title",
+      "text": "text",
+      "url": "url",
+      "files": [
+        {
+          "name": "images",
+          "accept": [
+            "image/jpeg",
+            "image/png",
+            "image/webp"
+          ]
+        }
+      ]
+    }
+  },
+  "protocol_handlers": [
+    {
+      "protocol": "web+beautively",
+      "url": "/protocol?type=%s"
+    }
+  ],
+  "file_handlers": [
+    {
+      "action": "/handle-file",
+      "accept": {
+        "image/jpeg": [
+          ".jpg",
+          ".jpeg"
+        ],
+        "image/png": [
+          ".png"
+        ],
+        "image/webp": [
+          ".webp"
+        ]
+      }
+    }
+  ],
+  "launch_handler": {
+    "client_mode": "navigate-existing"
+  },
+  "note_taking": {
+    "new_note_url": "/new-note",
+    "capture_links": true
+  },
+  "tab_strip": {
+    "home_tab": "new-tab-page",
+    "new_tab_button": {
+      "url": "/"
+    }
+  },
+  "side_panel": {
+    "preferred_width": 320
+  },
+  "widgets": [
+    {
+      "name": "Latest Designs",
+      "description": "See the latest flash designs from Beautively Inked.",
+      "tag": "latest-designs",
+      "template": "latest-designs-template",
+      "ms_ac_template": "latest-designs-template",
+      "data": "/widgets/latest.json",
+      "screenshots": [
+        {
+          "src": "https://i.ibb.co/fVzq56Ng/31e985d7-135f-4a54-98f9-f110bd155497-2.png",
+          "sizes": "1080x1080",
+          "type": "image/png",
+          "label": "A preview of the latest designs widget."
+        }
+      ],
+      "icons": [
+        {
+          "src": "https://i.ibb.co/RksbjvVJ/android-launchericon-192-192.png",
+          "sizes": "192x192",
+          "type": "image/png"
+        }
+      ]
     }
   ],
   "prefer_related_applications": true,
