feat(manifest): Simplify PWA configuration
Removes redundant scope extensions, start_url, and id. Updates `start_url` to "." for better PWA compatibility. Cleans up unused features like note taking and tab strip settings.

--- a/manifest.json
+++ b/manifest.json
@@ -28,14 +28,8 @@
       "purpose": "maskable"
     }
   ],
-  "start_url": "/",
+  "start_url": ".",
   "scope": "/",
-  "scope_extensions": [
-    {
-      "origin": "*.beautively-inked.com"
-    }
-  ],
-  "id": "/",
   "display": "standalone",
   "display_override": [
     "window-controls-overlay",
@@ -131,19 +125,6 @@
   ],
   "launch_handler": {
     "client_mode": "navigate-existing"
-  },
-  "note_taking": {
-    "new_note_url": "/new-note",
-    "capture_links": true
-  },
-  "tab_strip": {
-    "home_tab": "new-tab-page",
-    "new_tab_button": {
-      "url": "/"
-    }
-  },
-  "side_panel": {
-    "preferred_width": 320
   },
   "widgets": [
     {
