feat: Improve media loading and management
Introduces several enhancements for media handling across the application.

- **PortfolioModal:** Implements a `useRef` for video elements to manage playback and pauses videos when the modal transitions or closes. Adds a loading state for media items and resets video refs when media content changes.
- **ShowroomPage:** Uses `IntersectionObserver` to defer loading of showroom grid items until they are within viewport proximity, improving initial load performance. Also, the carousel now only activates for image galleries and is triggered by visibility.
- **ShowroomManager:** Integrates Firebase Storage for uploading images and videos, replacing local file reading with direct uploads. Adds a helper function to generate preview URLs for both string URLs and File objects.

These changes aim to optimize media loading, enhance user experience with smoother transitions, and improve the robustness of media management in the admin panel.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -33,6 +33,11 @@
                 android:name="android.support.customtabs.trusted.DEFAULT_URL"
                 android:value="https://REPLACE_WITH_YOUR_LIVE_WEBSITE_URL_HERE" />
 
+            <!-- This meta-data tag makes the TWA fullscreen, hiding the Chrome UI bar. -->
+            <meta-data
+                android:name="android.support.customtabs.trusted.DISPLAY_MODE"
+                android:value="immersive" />
+
             <!--
                  This meta-data tag is used to specify a list of additional trusted origins.
                  (e.g., for OAuth providers).
