feat: Implement video compression and improve admin interfaces
This commit introduces a utility for compressing video files before upload, optimizing storage and bandwidth. It also refactors the Portfolio and Showroom managers to integrate this compression functionality and provide better user feedback during the process.

Additionally, the admin logout flow is improved for a more immediate UI update by explicitly clearing user state. Manifest settings are also updated to include display overrides and edge panel configuration.

--- a/manifest.json
+++ b/manifest.json
@@ -32,6 +32,10 @@
   "scope": "/",
   "id": "/",
   "display": "standalone",
+  "display_override": [
+    "tabbed",
+    "window-controls-overlay"
+  ],
   "theme_color": "#0a0a0a",
   "background_color": "#0a0a0a",
   "orientation": "portrait-primary",
@@ -158,5 +162,9 @@
       "id": "com.beautively.inked",
       "url": "https://play.google.com/store/apps/details?id=com.beautively.inked"
     }
-  ]
+  ],
+  "scope_extensions": [],
+  "edge_side_panel": {
+    "preferred_width": 400
+  }
 }
